# dennic_api_gateway/api/docs/swagger.json
@@ -1985,6 +1985,12 @@
                         "name": "id",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "day_of_week",
+                        "name": "day_of_week",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -3919,8 +3925,8 @@
                 "order": {
                     "type": "integer"
                 },
-                "password": {
-                    "type": "string"
+                "patient_count": {
+                    "type": "integer"
                 },
                 "phone_number": {
                     "type": "string"
@@ -4074,9 +4080,6 @@
                 },
                 "order": {
                     "type": "integer"
-                },
-                "password": {
-                    "type": "string"
                 },
                 "phone_number": {
                     "type": "string"
