# dennic_api_gateway/api/models/model_healthcare_service/doctor.go
@@ -67,7 +67,7 @@ type DoctorRes struct {
 	WorkYears     int32   `json:"work_years"`
 	DepartmentId  string  `json:"department_id"`
 	RoomNumber    int32   `json:"room_number"`
-	Password      string  `json:"password"`
+	Password      string  `json:"-"`
 	CreatedAt     string  `json:"created_at"`
 	UpdatedAt     string  `json:"updated_at"`
 	DeletedAt     string  `json:"deleted_at"`
@@ -101,7 +101,7 @@ type DoctorAndDoctorHours struct {
 	WorkYears       int32        `json:"work_years"`
 	DepartmentId    string       `json:"department_id"`
 	RoomNumber      int32        `json:"room_number"`
-	Password        string       `json:"password"`
+	Password        string       `json:"-"`
 	CreatedAt       string       `json:"created_at"`
 	UpdatedAt       string       `json:"updated_at"`
 	DeletedAt       string       `json:"deleted_at"`
